css/styles.css
.gallery  {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  justify-content: center;
  object-fit: contain;
  align-items: center; /* Push images up by 10 pixels */

}


.gallery img {
 width: 100%;
 height: 75%;
 object-fit: contain; /* Overfit the images to cover the whole screen */
}

.gallery img:first-child {
  display: block;
}


body, html {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow: hidden;
  background-color: #21FFB9; /* Weyay, neon green color */
}

.gallery {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-wrap: nowrap;
  overflow-x: auto;
  height: 100vh;
}

:target img {
 display: none;
}

